test/files/neg/macro-abort/Macros_1.scala
import scala.language.experimental.macros
import scala.reflect.macros.BlackboxContext

object Macros {
  def impl(c: BlackboxContext) = {
    c.abort(c.enclosingPosition, "aborted")
  }
  def abort = macro impl
}